<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical" android:id="@+id/activity_main">
    <Button
            android:id="@+id/btn_new_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_convert_two"/>
    <TextView
            android:text="@string/txtresult"
            android:layout_width="match_parent"
            android:layout_height="37dp" android:id="@+id/txt_result"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="163dp" app:srcCompat="@drawable/img_moeda" android:id="@+id/fundo"
            android:contentDescription="@string/fundo" android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/valor_real"
            android:layout_width="match_parent"
            android:layout_height="27dp" android:id="@+id/valor"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="34dp" android:id="@+id/sbValor" android:max="1001" android:min="1"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="128dp" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/dolar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/rbDolar" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/euro"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/rbEuro" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/ienes"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/rbIenes" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/btn_calcula"
            android:layout_width="match_parent"
            android:layout_height="51dp" android:id="@+id/btn_result"/>
</LinearLayout>