<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityTwo"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical" android:id="@+id/activity_two">

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="35dp" tools:ignore="MissingConstraints"/>
    <TextView
            android:text="@string/result_two"
            android:layout_width="match_parent"
            android:layout_height="33dp" android:id="@+id/result_two"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="231dp" app:srcCompat="@drawable/img_pedras" android:id="@+id/imageView"
                android:contentDescription="@string/img_two"/>
        <TextView
                android:text="@string/value_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/valor_two"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="33dp" android:id="@+id/sbValorTwo" android:min="1" android:max="10"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="128dp">

        <RadioButton
                android:text="@string/rb_ouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_ouro" android:layout_weight="1"/>

        <RadioButton
                android:text="@string/rb_rubi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_rubi" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/rb_diamante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rb_diamante" android:layout_weight="1"/>
    </RadioGroup>

    <Button
            android:text="@string/btn_calc_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btn_calc_two"/>

</LinearLayout>